# server_maktaba_shamela

./: -d  .env  .env.example  README.md  conversation.json  conversation_history1.json  conversation_history2.json  conversation_history_full.json  create_test_structure.bat  index.html  login_response.json  main.py  message1_response.json  message2_response.json  message3_response.json  mistral_test.py  pyproject.toml  register_response.json  render.yaml  requirements.txt  setup_appwrite_collections.py  test_api - Copy.bat
.github/workflows/: keep-alive.yml
app/: main.py  wsgi.py
app/api/: auth_utils.py  dependencies.py  index.html
app/config/: settings.py
app/core/: chat_service.py  clients.py  context_formatter.py  document_processor.py  embeddings.py  llm_service.py  rag.py  retrieval.py  retrieval_old.py  setup_appwrite_collections.py  storage.py  (+2 more)
docs/: appwrite_auth.md  appwrite_db.md  doc_backend_struct.md
server/: clients.py  main.py  models.py  requirements.txt  utils.py  wsgi.py
test_old/: conversation.json  conversation_history1.json  conversation_history2.json  conversation_history_full.json  login_response.json  message1_response.json  message2_response.json  message3_response.json  register_response.json  test_api.bat  test_api_prod.bat  test_auth.bat  test_auth.py
tests/: conftest.py  conversation.json  conversation_history1.json  conversation_history2.json  conversation_history_full.json  login_response.json  message1_response.json  message2_response.json  message3_response.json  register_response.json  test_api.bat  test_api.py  test_main.py
(+41 files in other folders)
